# pymatrix-rain

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pymatrix.py  requirements-dev.txt  setup.cfg
pymatrix/: pymatrix.py
tests/: test_MatrixLine_class.py  test_argument_parsing.py  test_old_scrolling_line_class.py  test_pymatrix.py  test_single_line_class.py
