[metadata]
name = pymatrix-rain
version = 0.2.0
description = matrix rain using curses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tech-chad/pymatrix
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires:
    importlib-metadata>=1.6
python_requires = >= 3.6.1

[options.packages.find]
exclude =
    tests*
    tests

[options.entry_points]
console_scripts =
    pymatrix-rain = pymatrix.pymatrix:main