[metadata]
name = pymatrix-rain
version = 1.2.0
description = matrix rain using curses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FuryGreenwood324/pymatrix-rain
author = Chad Larson - FuryGreenwood
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires:
    importlib-metadata>=1.6
python_requires = >= 3.7

[options.packages.find]
exclude =
    tests*
    tests

[options.entry_points]
console_scripts =
    pymatrix-rain = pymatrix.pymatrix:main