[metadata]
name = pymatrix-rain
version = 1.2.0
description = matrix rain using curses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tech-chad/pymatrix
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires:
    importlib-metadata>=1.6;python_version<"3.8"
    windows-curses;sys_platform=="win32"
python_requires = >= 3.7

[options.packages.find]
exclude =
    tests*
    tests

[options.entry_points]
console_scripts =
    pymatrix-rain = pymatrix.pymatrix:main

[bdist_wheel]
universal = True